feat(lanzou): 实现getTrashList